# osc-github-devops

./: .gitignore  .pre-commit-config.yaml  .prettierrc  BADGES.rst  Pipfile  README.md  REUSE.toml  pyproject.toml  sonar-project.properties  tox.ini
.github/: dependabot.yml  release-drafter.yml  unused-actions.sh
.github/actions/file-grep-regex/: action.yaml
.github/actions/file-grep-regex-action/: README.md  action.yaml
.github/actions/file-sed-regex/: action.yaml
.github/actions/file-sed-regex-action/: action.yaml
.github/actions/gerrit-change-id/: README.md  action.yaml
.github/actions/gerrit-change-id-action/: README.md  action.yaml
.github/actions/gerrit-inject-issue-id-action/: action.yaml
.github/actions/gerrit-issue-id/: action.yaml
.github/actions/gerrit-issue-id-action/: action.yaml
.github/actions/git-commit-message/: action.yaml
.github/actions/git-commit-message-action/: README.md  action.yaml
.github/actions/git-commit-message-body/: action.yaml
.github/actions/git-configure/: action.yaml
.github/actions/git-default-branch-action/: action.yaml
.github/actions/git-last-commit/: README.md  action.yaml
.github/actions/git-last-commit-action/: README.md  action.yaml
.github/actions/github-get-latest-release-action/: action.yaml
.github/actions/github-labels/: action.yaml
.github/actions/github-labels-action/: action.yaml
.github/actions/github-latest-release/: action.yaml
.github/actions/github-list-releases-action/: README.md  action.yaml
.github/actions/github-pr-metadata-action/: README.md  action.yaml
.github/actions/github-release-action/: README.md  action.yaml
.github/actions/github-secrets/: action.yaml
.github/actions/inject-issue-id-action/: action.yaml
.github/actions/json-var-key-value-lookup/: action.yaml
.github/actions/linting-action/: README.md  action.yaml
.github/actions/openssf-scorecard-audit-action/: action.yaml
.github/actions/openssf-scorecard-summary-action/: README.md  action.yaml
.github/actions/ossf-scorecard-action/: README.md  action.yaml
.github/actions/path-check/: action.yaml
.github/actions/path-check-action/: README.md  action.yaml
.github/actions/pinned-versions-action/: README.md  action.yaml
.github/actions/project-name-action/: README.md  action.yaml
.github/actions/project-name-compare-action/: README.md  action.yaml
.github/actions/project-name-vs-repo-action/: README.md  action.yaml
.github/actions/pypi-publish-action/: action.yaml
.github/actions/pypi-version-check-action/: README.md  action.yaml
.github/actions/python-audit-action/: README.md  action.yaml
.github/actions/python-audit-matrix/: action.yaml
.github/actions/python-build-action/: README.md  action.yaml
.github/actions/python-build-dyn-version/: action.yaml
.github/actions/python-dependencies-declared/: action.yaml
.github/actions/python-dynamic-version-action/: README.md  action.yaml
.github/actions/python-get-project-name-action/: action.yaml
.github/actions/python-project-audit-action/: README.md  action.yaml
.github/actions/python-project-audit-matrix/: README.md  action.yaml
.github/actions/python-project-build-action/: action.yaml
.github/actions/python-project-name/: action.yaml  (+1 more)
.github/workflows/: actions.yaml  build-test-release.yaml  build-test.yaml  call-github-issue-id.yaml  codeql.yaml  codeql.yml  dependencies.yaml  documentation.yaml  github-release.yaml  github2gerrit.yaml  inventory.yaml  issue-id.yaml  jupyter-notebooks.yaml  linting.yaml  merge-build-test-release.yaml  merge-build-test.yaml  merge-dependencies.yaml  merge-documentation.yaml  merge-release.yaml  merge-security.yaml  merge-test-gha.yaml  merge.yaml  one-password-credentials.yaml  one-password.yaml  openssf-scorecard.yaml  primary.yaml  pypi-package.yaml  pypi-publish.yaml  pypi-release.yaml  python-build-attest.yaml  python-build-matrix.yaml  python-build.yaml  python-github-release.yaml  python-project-setup.yaml  python-security.yaml  python-test-matrix.yaml  python-tests.yaml  release-drafter.yaml  release.yaml  release.yaml.previous  (+31 more)
linting/: README.md  pre-commit-config.yaml
notebooks/: test.ipynb
scripts/: test.sh
src/: __init__.py
tests/: test_cli.py
tests/resources/: test-valid-file-symlink
tests_fail/: README.md  test_cli_fail.py
(+79 files in other folders)
